# core

./: .ackrc  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING.txt  F18_master.md  LICENSE.txt  Makefile  README.md  README.txt  a.hb  ansiweather  appveyor.sh  appveyor.yml  d.hb  my_patents  ssBrotherHOoD  start32.bat  start64.bat
contrib/gtnap/: .gitignore  CMakeLists.txt  CMakeTargets.cmake  Debugger.md  Debugger.txt  KnownIssues.md  Readme.md  ReadmeUNO.md  build.bat  build.sh  checkbox.c  cua.ch  cua20.ch  editbox.c  gtconvert.c  gtconvert.h  gtnap.c  gtnap.ch  gtnap.h  gtnap.hbc  gtnap.hbp  gtnap.hbx  gtnap.prg  gtnapd.c  hbgtnap.h  menubar.c  nap_button.c  nap_color.c  nap_combo.c  nap_cualib.c  nap_edit.c  nap_event.c  nap_font.c  nap_global.c  nap_image.c  nap_imageview.c  nap_label.c  nap_layout.c  nap_listbox.c  nap_menuvert.c  (+11 more)
contrib/gtnap/designer/: GTNAP-Forms.md  Readme.md  designer.odg  plan.md
contrib/gtnap/devinfo/: useful_commands.md
contrib/gtnap/devinfo/gtwvw_exes/: test1.ntx
contrib/gtnap/inc/core/: core.def  coreall.h  strings.h
contrib/gtnap/inc/draw2d/: draw2d.def  draw2d.hxx  guictx.h  guictx.hxx
contrib/gtnap/inc/geom2d/: geom2d.def
contrib/gtnap/inc/gui/: button.h  edit.h  gui.def  gui.hxx  tableview.h  textview.h  view.h  window.h
contrib/gtnap/inc/inet/: inet.def
contrib/gtnap/inc/osapp/: osapp.def
contrib/gtnap/inc/osbs/: osbs.def
contrib/gtnap/inc/sewer/: cassert.h  sewer.def
contrib/gtnap/nappgui/src/: CMakeLists.txt
contrib/gtnap/prj/: CMakeFunctions.cmake  CMakeVSWarnings.cmake  CMakeXCWarnings.cmake  NAppAppleClang.cmake  NAppClang.cmake  NAppCompilers.cmake  NAppGCC.cmake  NAppGenerateTools.cmake  NAppGenerators.cmake  NAppMSVC.cmake  NAppMacOS.cmake  NAppOSXSdkName.cmake  NAppTarget.cmake  NAppVSToolset.cmake  NAppVersion.cmake
contrib/gtnap/resources/: CMakeLists.txt  hbmk2.c  hbmk2_lin.c
contrib/gtnap/src/: CMakeLists.txt
contrib/gtnap/src/core/: CMakeLists.txt  array.c  arrpt.h  arrst.h  clock.c  core.cpp  core.def  date.c  dbind.c  heap.c  rbtree.c  setpt.hpp  strings.c  strings.h  tfilter.c
contrib/gtnap/src/deblib/: CMakeLists.txt  deblib.c  deblib.h  deblib.hxx
contrib/gtnap/src/debugger/: CMakeLists.txt  debugger.c
contrib/gtnap/src/designer/: CMakeLists.txt  dbutton.c  dbutton.h  dcell.c  dedit.c  dedit.h  designer.c  designer.h  designer.hxx  dform.c  dform.h  dialogs.c  dialogs.h  dlabel.c  dlabel.h  dlayout.c  dlayout.h  inspect.c  inspect.h  main.c  propedit.c  propedit.h
contrib/gtnap/src/draw2d/: CMakeLists.txt  draw2d.c  draw2d.def  draw2d.h  draw2d.hxx  draw2d.inl  font.c  font.h  font.inl  guictx.c  guictx.h  guictx.hxx
contrib/gtnap/src/exemplo/: CMakeLists.txt  acentos.c  arqtexto.c  entrada.c  exemplo.c  exemploauxiliar.c  exemplodbf.c  exemploentradadados.c  exemplomenu.c  exemplotextoarquivo.c  exemplotextomemoria.c  exemplovetor.c  fileio2.c  inkey_.c  janela.c  menuvert.c  outros.c  selecaoa.c  selecaov.c  stubs.c  tbrowsesubclass.c  texto.c
contrib/gtnap/src/geom2d/: CMakeLists.txt  col2d.cpp  geom2d.def  obb2d.ipp  pol2d.cpp  pol2d.hpp  pol2d.ipp  polabel.cpp  polpart.cpp  s2d.cpp
contrib/gtnap/src/gtnap/: CMakeLists.txt  gtconvert.c  gtconvert.h  gtnap.c  gtnap.h  gtnap.inl  gtnap.ixx  nap_button.c  nap_color.c  nap_combo.c  nap_cualib.c  nap_debugger.c  nap_debugger.inl  nap_edit.c  nap_event.c  nap_font.c  nap_form.c  nap_global.c  nap_image.c  nap_imageview.c  nap_label.c  nap_layout.c  nap_listbox.c  nap_menu.c  nap_menu.inl  nap_menuvert.c  nap_menuvert.h  nap_office.c  nap_panel.c  nap_sheet.c  nap_tableview.c  nap_tableview.inl  nap_textview.c  nap_window.c  nap_writer.c
contrib/gtnap/src/gui/: CMakeLists.txt  button.c  buttonh.h  cell.h  component.c  component.inl  edit.c  gbind.c  gui.c  gui.def  gui.h  gui.hxx  gui.ixx  guiall.h  imageview.c  label.c  labelh.h  layout.c  layout.h  layouth.h  listbox.c  listbox.h  panel.c  panel.h  panel.inl  splitview.c  splitview.h  tableview.c  tableview.h  textview.c  textview.h  view.c  view.h  view.inl  window.c  window.h  window.inl
contrib/gtnap/src/inet/: CMakeLists.txt  inet.def  json.c
contrib/gtnap/src/napdesign/: CMakeLists.txt  dcell.h  dcheck.c  dcheck.h  designer.c  designer.h  designer.hxx  dform.c  dform.h  dialogs.c  dialogs.h  dlabel.c  dlayout.c  dlayout.h  inspect.c  propedit.c  propedit.h
contrib/gtnap/src/napforms/: CMakeLists.txt  napforms.c  napforms.def  napforms.h  napforms.hxx
contrib/gtnap/src/nflib/: CMakeLists.txt  fbutton.c  fbutton.h  fcheck.c  fcheck.h  fedit.c  fedit.h  flabel.c  flabel.h  flayout.c  flayout.h  ftext.c  ftext.h  nflib.c  nflib.def  nflib.h  nflib.hxx
contrib/gtnap/src/nform/: CMakeLists.txt  fbutton.c  fbutton.h  fcheck.c  fcheck.h  fedit.c  fedit.h  flabel.c  flabel.h  flayout.c  flayout.h  nform.c  nform.def  nform.h  nform.hxx
contrib/gtnap/src/nforms/: CMakeLists.txt  nform.c  nform.h  nforms.c  nforms.def  nforms.h  nforms.hxx
contrib/gtnap/src/officesdk/: CMakeLists.txt  officesdk.cpp  officesdk.h  officesdk.hxx  sheetsdk.h  writersdk.h
contrib/gtnap/src/osapp/: CMakeLists.txt  osapp.c  osapp.def  osapp.h  osmain_win.h
contrib/gtnap/src/osbs/: CMakeLists.txt  osbs.c  osbs.def
contrib/gtnap/src/osgui/: CMakeLists.txt  osbutton.h  osctrl.c  osctrl.inl  osedit.h  osgui.c  osgui.def  osgui.inl  (+7 more)
contrib/gtnap/tests/: demo.exe.manifest  demo.prg  drawimg.prg  exemplo.hbp  exemplo.prg  exemplo_dbf.prg  exemplo_entradadados.prg  exemplo_menu.prg  exemplo_textoarquivo.prg  exemplo_vetor.prg  hello.prg  inpfocus.prg  log.txt  maximize.prg  outros.prg
contrib/gtnap/tools/: CMakeLists.txt
contrib/hboffice/: .gitignore  CMakeLists.txt  Readme.md  ReadmeAPI.md  build-dev.bat  build.bat  build.sh  hboffice.ch  hboffice.hbc  hboffice.hbp  hboffice.hbx  test.bat  test.sh
contrib/hboffice/resources/: CMakeLists.txt  hbmk2_lin.c  hbmk2_win.c
contrib/hboffice/tests/: doc1.prg  doc2.prg  sheet1.hbp  sheet1.prg  sheet2.prg
nap-dev/: CMakeLists.txt  HarbourTools.cmake  build_all.bat  build_all.sh  hbmk2_win.c
(+18970 files in other folders)
